<resources>
    <string name="app_name">Sigma</string>
    <string name="facebook_app_id">1392316410853307</string>
    <string name="fb_login_protocol_scheme">fb1392316410853307</string>

    <string name="login_fb">Entrar con Facebook</string>
    <string name="transactions_count">Conteo de transacciones</string>
    <string name="transactions_today">Transacciones hoy</string>
    <string name="incomes_today">Ingresos hoy</string>
    <string name="transactions">Transacciones</string>
    <string name="under_limit">Debajo del limite</string>
    <string name="last_transaction">Última transacción</string>
    <string name="last_transactions">Ultimas transacciones</string>
    <string name="name">Nombre</string>
    <string name="card_number">Número de tarjeta</string>
    <string name="create">Crear</string>
    <string name="error_name_required">Ingresa un nombre valido</string>
    <string name="error_card_number_invalid">Ingresa un número valido</string>
    <string name="date">Fecha</string>
    <string name="time">Hora</string>
    <string name="account">Cuenta</string>
    <string name="category">Categoría</string>
    <string name="quantity">Cantidad</string>
    <string name="description">Descripción</string>
    <string name="income">Ingreso</string>
    <string name="is_income">¿Ingreso?</string>
    <string name="transaction_income_description">La cantidad será abonada a la cuenta</string>
    <string name="transaction_spent_description">La cantidad será descontada de la cuenta</string>
    <string name="category_name_transport">Transporte</string>
    <string name="category_description_transport">Gastos en transporte publico o gasolina</string>
    <string name="category_name_entertainment">Entretenimiento</string>
    <string name="category_description_entertainment">Gastos en entretenimiento (cine, conciertos, viajes, paseos etc)</string>
    <string name="category_name_provisions">Despensa/Viveres</string>
    <string name="category_description_provisions">Gastos en comida, despensa y provisiones en general</string>
    <string name="category_name_clothes_shoes">Ropa y zapatos</string>
    <string name="category_description_clother_shoes">Ropa y zapatos</string>
    <string name="category_name_home">Hogar</string>
    <string name="category_description_home">Pagos de servicios del hogar (renta, internet, electricidad, etc)</string>
    <string name="category_name_restaurants">Restaurantes o cafeterías</string>
    <string name="category_description_restaurants">Pagos en restaurantes y cafeterías</string>
    <string name="category_name_bar">Bares y entretenimiento nocturno</string>
    <string name="category_description_bar">Pagos en bares y bebidas</string>
    <string name="category_name_salary">Salario</string>
    <string name="category_description_salary">Pago por actividades de trabajo</string>
    <string name="category_description_other">Ninguna de las anteriores</string>
    <string name="category_name_other">Otra</string>
    <string name="no">No</string>
    <string name="yes">Si</string>
    <string name="date_time">Fecha y hora</string>
    <string name="error_date_before_required">Ingresa una fecha menor</string>
    <string name="error_quantity_greater_zero">Ingresa una cantidad mayor a 0</string>
    <string name="accounts">Cuentas</string>
    <string name="drawer_open">Menu lateral abierto</string>
    <string name="drawer_close">Cerrar menu lateral</string>
    <string name="transactions_categories">Categorias de transacciones</string>
    <string name="preferences">Preferencias</string>
    <string name="scheduled_transactions">Transacciones programadas</string>
    <string name="charts">Gráficas y análisis</string>
    <string name="resume_pane">Panel de resumen</string>
    <string name="small_period">Periodo corto</string>
    <string name="sm_period_daily_weekend_as_single_day">Por cada dia pero agrupar los fines de semana</string>
    <string name="sm_period_daily">Por cada dia</string>
    <string name="large_period">Periodo largo</string>
    <string name="lg_period_monthly">Mes actual</string>
    <string name="lg_period_fortnight">Quincena en curso (Desde el 1 ó 15 del mes)</string>
    <string name="lg_period_weekly">Semana actual</string>
    <string name="setting_day_start_hour">Inicio del dia (Periodos cortos)</string>
    <string name="analysis_params">Parametros de análisis automatico</string>
    <string name="period_lg_spent_limit">Límite de gastos (Periodo largo)</string>
    <string name="ask_for_transactions_if_there_are_not">Solicitar transacciones si no las hay</string>
    <string name="reminder_1">Primer recordatorio</string>
    <string name="reminder_2">Segundo recordatorio</string>
    <string name="save">Guardar</string>
    <string name="error_valid_hour">Ingresa una hora valida</string>
    <string name="error_must_be_greater_than_first_reminder">Debe ser posterior al primer recordatorio</string>
    <string name="spent_limit_warnings">Advertencias de limite de gastos</string>
    <string name="include_home_spent_from_limits">Incluir gastos de hogar y pagos de servicios</string>
    <string name="over_limit">Sobre el limite</string>
    <string name="today">Hoy</string>
    <string name="this_weekend">Fin de semana</string>
    <string name="this_week">Esta semana</string>
    <string name="this_fortnight">Esta quincena</string>
    <string name="this_month">Este mes</string>
    <string name="spent_today">Gastados hoy</string>
    <string name="spent_this_weekend">Este fin de semana</string>
    <string name="never">Nunca</string>
    <string name="transaction">Transacción</string>
    <string name="without_transactions">Sin transacciones</string>
    <string name="register_transaction">Registrar transacción</string>
    <string name="now">Ahora</string>
    <string name="just_now">Justo ahora</string>
    <string name="relative_time_past_prefix">Hace</string>
    <string name="time_abbr_mins">mins</string>
    <string name="time_abbr_min">min</string>
    <string name="time_abbr_hour">hr</string>
    <string name="time_abbr_hours">hrs</string>
    <string name="time_abbr_days">dias</string>
    <string name="time_abbr_day">dia</string>
    <string name="cancel">Cancelar</string>
    <string name="stats">Estadísticas</string>
    <string name="choose_category">Elije una categoría</string>
    <string name="dots">…</string>
    <string name="error_category_required_title">Elije una categoría</string>
    <string name="error_category_required">Debes elejir una categoría para esta transacción</string>
    <string name="ok">OK</string>
    <string name="add_account">Agregar cuenta</string>
    <string name="add_transaction">Nueva transacción</string>
    <string name="edit_transaction">Editar transacción</string>
    <string name="transaction_details">Transacción</string>
    <string name="delete">Eliminar</string>
    <string name="exclude_from_spent_resume">¿Excluir de resumen de gastos?</string>
    <string name="without__scheduled_transactions">Sin transacciones programadas</string>
    <string name="weekly">Semanales</string>
    <string name="monthly">Mensuales</string>
    <string name="title_activity_scheduled_trans">Transacciones programadas</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="schedule_for_days">Programar los días</string>
    <string name="sunday_abbr">D</string>
    <string name="monday_abbr">L</string>
    <string name="tuesday_abbr">M</string>
    <string name="wednesday_abbr">M</string>
    <string name="thursday_abbr">J</string>
    <string name="friday_abbr">V</string>
    <string name="saturday_abbr">S</string>
    <string name="choose_at_least_one_day">Elije por lo menos un dia de la semana</string>
    <string name="scheduled_transaction_hour_required">Ingrese la hora para la transacción programada</string>
    <string name="sunday_abbr_md">Dom</string>
    <string name="monday_abbr_md">Lun</string>
    <string name="tuesday_abbr_md">Mar</string>
    <string name="wednesday_abbr_md">Mie</string>
    <string name="thursday_abbr_md">Jue</string>
    <string name="friday_abbr_md">Vie</string>
    <string name="saturday_abbr_md">Sab</string>
    <string name="scheduled_for_days">Programada para los dias</string>
    <string name="scheduled_transaction">Transacción programada</string>
    <string name="u_sure">¿Estas seguro?</string>
    <string name="confirm_delete_scheduled_transaction">¿Confirmas que deseas eliminar esta transacción programada?</string>
    <string name="confirm_transaction_delete">Seguro que deseas eliminar esta transacción? Esta acción es irreversible</string>
    <string name="without_accounts">Sin cuentas activas</string>
    <string name="active_accounts_required">Asegurate de registrar al menos una cuenta antes de continuar</string>
    <string name="ago">Hace</string>
    <string name="minutes">minutos</string>
    <string name="minute">minuto</string>
    <string name="fortnight">Quincena</string>
    <string name="week">Semana</string>
    <string name="month">Este mes</string>
    <string name="outcome">Egreso</string>
    <string name="outcomes">Egresos</string>
    <string name="incomes">Ingresos</string>
    <string name="current_period">Periodo actual</string>
    <string name="to_the">a las</string>
    <string name="yesterday">Ayer</string>
    <string name="before_yesterday">Antier</string>
    <string name="account_details">Detalles de cuenta</string>
    <string name="wait_a_moment_please">Espere un momento por favor ...</string>
    <string name="recalculate_balance">Recalcular saldo</string>
    <string name="adjust_balance">Ajustar saldo</string>
    <string name="error_insufficient_funds">Saldo insuficiente</string>
    <string name="error_insufficient_funds_detail">Parece que no tienes fondos suficientes en esta cuenta.</string>
    <string name="error_transaction_save_title">Transacción no guardada</string>
    <string name="error_transaction_save">La transacción no se pudo guardar con los datos proporcionados. Intenta de nuevo por favor ...</string>
    <string name="current_balance">Saldo al momento</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="irreversible_action">Esta acción es irreversible</string>
    <string name="the_account">La cuenta</string>
    <string name="and_all_its_trans_will_be_deleted_u_sure">y todas sus transacciones serán eliminadas. Esta acción no podra deshacerce. ¿Estas seguro?</string>
</resources>
