<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/til_error_appearance">

                <EditText
                    android:id="@+id/et_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/date"
                    android:inputType="date"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:errorTextAppearance="@style/til_error_appearance">

                <EditText
                    android:id="@+id/et_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/time"
                    android:inputType="time"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Account -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/account"
                android:textColor="@color/colorAccent"/>
            <Spinner
                android:id="@+id/sp_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Category -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/category"
                android:textColor="@color/colorAccent"/>
            <Spinner
                android:id="@+id/sp_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Income or spent -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/is_income"
                android:textColor="@color/colorAccent"/>
            <Switch
                android:id="@+id/sw_is_income"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textOff="@string/transaction_spent_description"
                android:textOn="@string/transaction_income_description"
                android:textColor="@color/colorAccent"/>

            <!-- Quantity -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:errorTextAppearance="@style/til_error_appearance">

                <EditText
                    android:id="@+id/et_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/quantity"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Description -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:errorTextAppearance="@style/til_error_appearance">

                <EditText
                    android:id="@+id/et_description"
                    android:ems="10"
                    android:gravity="top|start"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="3"/>
            </android.support.design.widget.TextInputLayout>

            <Button style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/btn_save"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/create"/>
        </LinearLayout>
    </ScrollView>
</layout>